--- a/package.json
+++ b/package.json
@@ -7,5 +7,5 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "Sitio web creado para entrega final de curso HTML de Coderhouse, contiene 5 paginas, todas full responsive. Se incluyen animaciones, como asi tambien de bootstrap."
 }
